--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 eframe = "0.25.0"
 egui = "0.25.0"
+lazy_static = "1.4.0"
 pretty_env_logger = "0.5.0"
 rusqlite = "0.30.0"
+rusqlite_migration = "1.1.0"
